xp service tests seems done